<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_baseline_contacts_24"
            android:title="@string/contact_form" />
        <item
            android:id="@+id/nav_visitors"
            android:icon="@drawable/ic_round_people_alt_24"
            android:title="@string/visitors" />
        <item
            android:id="@+id/nav_export_csv"
            android:icon="@drawable/ic_baseline_import_export_24"
            android:title="@string/export_to_csv" />
    </group>
</menu>