<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExportFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/statusTitleId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/entry_status"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/statusEntryTitleId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/total_no_of_entries"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statusTitleId" />

        <TextView
            android:id="@+id/statusEntriesId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/entries_count"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statusEntryTitleId" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnExportToCSV"
            android:layout_width="400dp"
            android:layout_height="80dp"
            android:layout_marginTop="50dp"
            android:background="@color/green_700"
            android:text="@string/export_to_csv"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            app:icon="@drawable/ic_baseline_import_export_24"
            app:iconSize="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statusEntriesId"
            style="@style/Widget.MaterialComponents.Button"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>